Fix Blurry Text on Modal Overlay

--- a/wp-content/themes/tomle/less/override/custom_theme/overlay.less
+++ b/wp-content/themes/tomle/less/override/custom_theme/overlay.less
@@ -12,9 +12,11 @@
 			min-height: 400px;
 			overflow: hidden;
 			width: 85%;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			top: 10%;
+			left: 0;
+			right: 0;
+			margin: auto;
+			//transform: translate(-50%, -50%);
 			.overlay-close {
 				top: 0;
 				right: 0;
